--- a/src/map/templates/map.html
+++ b/src/map/templates/map.html
@@ -24,6 +24,14 @@
 <body>
 
     <div id="mapid"></div>
+
+    <form method="POST">
+        {% csrf_token %}
+        {{form_points.as_p}}
+        <button>Enviar</button>
+    </form>    
+    <input type="hidden" id="myVar" name="variable" readonly value="{{ variable }}">
+
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script 
         src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js"
@@ -79,6 +87,8 @@
                 });
             }
             get_cordinates(render_map)
+
+            var myVar = document.getElementById("myVar").value;
         }
     </script>
 </body>
